--- a/src/components/Layout/DefaultLayout/DefaultLayout.module.scss
+++ b/src/components/Layout/DefaultLayout/DefaultLayout.module.scss
@@ -1,14 +1,14 @@
-.wrapper{
+.wrapper {
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-.container{
-    width: var(--default-layout-width);
+.container {
+    width: 100%;
     display: flex;
 }
-.content{
-    flex:1;
-    min-height:1000px;
+.content {
+    flex: 1;
+    min-height: 1000px;
 }
